FlightPath 4.x Changelog
========================

2012-12-17
  Modified user.module, so role headers on permissions form appear for every module.
  Otherwise, it was confusing when the list of permissions was very long.
  
  Moving FlightPath version from dev to 4.0-rc1, signifying "release candidate" status.


2012-12-14
  More work on Course Search, making the rotation schedule entry more closely
  follow the established term_id structure.


2012-12-13
  Added jQuery UI plugin to core, as well as its CSS file.
  
  Expanded Course Search's edit abilities, to make it easier to
  update large numbers of courses.


2012-12-10
  Fixed bug in the report bug popup, where a user couldn't submit
  more than one report per session.
  

2012-12-07
  Fixed bug which caused user roles to not be editable from form.


2012-11-30
  Fixed a few minor bugs around FP, mostly related to display.
  
  Course descriptions have non-UTF8 chars stripped out by default.  This
  might need to be something I re-think for version 5.x, so other languages can
  use it.
  
  Changed Modules page to make it more clear when a core module is overrided.  What
  was being displayed was somewhat confusing.
  

2012-11-28
  Corrected bug where forms couldn't be submitted via js when an element (like a button)
  was named "submit".  Simply auto-renamed elements named "submit" to "btn_submit".
  
  Fixed bug where $form var wasn't being passed by reference to submit handlers.
  
  Fixed several bugs introduced to admin degree, course, and group entry by changes
  to the Form API.
  
  Made a big change to Announcements, to use the content module instead of being
  its own module.
  

2012-11-27
  Added roles as CSS classes to table rows in the user management area, to help
  with themeing.
  

2012-11-20
  Added "loading" message when pulling up a new student.
  
  Corrected display bug on the admin degree entry page, when listing
  degrees it did not show track titles correctly.
  